Add change to tweets_controller, Add Associations user/tweets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,3 +32,11 @@
 .notification:not(:last-child) {
 	 margin-bottom: 0;
 }
+
+.notice {
+	text-align: center;
+}
+
+.alert {
+	text-align: center;
+}
