--- a/app/views/layouts/_notice_and_alerts.html.erb
+++ b/app/views/layouts/_notice_and_alerts.html.erb
@@ -1,11 +1,11 @@
     <% if flash[:notice] %>
-      <div class="notification.is-primary.global-notification">
+      <div class="notification is-primary global-notification">
         <p class="notice"><%= notice %></p>
       </div>
     <% end %>
 
     <% if flash[:alert] %>
-      <div class="notification.is-danger.global-notification">
+      <div class="notification is-danger global-notification">
         <p class="alert"><%= alert %></p>
       </div>
     <% end %>
