--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -22,15 +22,12 @@
   		<div class="media-content">
   			<div class="content">
   				<strong> <%= tweet.user.name %> </strong><br />
-  				<small> <%= tweet.user.username %> </small><br />
+  				<small> @<%= tweet.user.username %> </small><br />
   				<p><%= tweet.tweet %></p>
   			</div>
         <% if user_signed_in? %>
   			<nav class="level">
   			  <div class="level-left is-mobile">
-  				<%= link_to tweet, class: "level-item" do %>
-  				  <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
-  				<% end %>
 
   				<%= link_to edit_tweet_path(tweet), class: "level-item" do %>
   				  <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
