Add jQuery, timeout alerts, add fix to relationships

--- a/app/views/tweets/_trends.html.erb
+++ b/app/views/tweets/_trends.html.erb
@@ -1,3 +1,4 @@
+<% if user_signed_in? %>
 <div class="column is-one-quarter">
 	<nav class="panel">
 		<p class="panel-heading">Trends</p>
@@ -6,3 +7,4 @@
 		  <% end %>
 	</nav>
 </div>
+<% end %>
