--- a/app/views/tweets/_who-to-follow.html.erb
+++ b/app/views/tweets/_who-to-follow.html.erb
@@ -1,3 +1,4 @@
+<% if user_signed_in? %>
 <div class="column">
 	<nav class="panel">
 		<p class="panel-heading">Who to Follow</p>
@@ -20,3 +21,4 @@
 			</div>
 		</article>
 	</div>
+<% end %>
