--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,18 +20,18 @@
 
           <div>
             <p class="heading">Tweets</p>
-            <p class="title is-6"><%= current_user.tweets.count %></p>
+            <p class="title is-6"><%= @user.tweets.count %></p>
           </div>
         
           <div>
             <p class="heading">Following</p>
-            <p class="title is-6"><%= current_user.following.count %></p>
+            <p class="title is-6"><%= @user.following.count %></p>
           </div>
        
         
           <div>
             <p class="heading">Followers</p>
-            <p class="title is-6"><%= current_user.followers.count %></p>
+            <p class="title is-6"><%= @user.followers.count %></p>
           </div>
 
       <h1 class="users">
