Add logic to Like's model -Update seed.rb -Tidy up _feed

--- a/app/views/tweets/_who-to-follow.html.erb
+++ b/app/views/tweets/_who-to-follow.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
 <div class="column">
 	<nav class="panel">
-		<p class="panel-heading">Who to Follow</p>
+		<p class="panel-heading"><%= link_to "Who to Follow", users_path %></p>
 
 	<div class="panel-block">
 		<article class="media">
