--- a/app/views/tweets/_profile.html.erb
+++ b/app/views/tweets/_profile.html.erb
@@ -1,6 +1,6 @@
 <div class="column is-one-quarter">
 	<nav class="panel">
-		<p class="panel-heading">Profile</p>
+		<p class="panel-heading"><%= link_to "Profile", @user %></p>
 		<div class="panel-block">
 			<article class="media">
 				<div class="media-left">
